# sap_2000_api_python_mcp

./: .gitignore  Dockerfile  MANIFEST.in  README.md  README.md.bak  package.json  pyproject.toml  smithery.yaml  배포참고문서.md
scripts/: build_cards.py
src/mcp/: __init__.py  api.py  config.py  core.py  stdio_server.py
src/sap2000_mcp/: __init__.py  config.py  core.py  logging_utils.py  scoring.py  stdio_server.py  text_utils.py  vocabulary.py
